--- a/client/templates/accounts/new.html
+++ b/client/templates/accounts/new.html
@@ -10,7 +10,7 @@
         <div class="col-lg-8">
             <div class="panel panel-default">
                 <div class="panel-body">
-                    {{> accountsFormInsert }}
+                    {{> accountsFormInsert  dName="testing this"}}
                 </div>
             </div>
         </div>
