--- a/client/templates/contacts/view.html
+++ b/client/templates/contacts/view.html
@@ -1,96 +1,151 @@
 <template name="ContactsView">
-    {{#unless contact}}
-        {{> contactsError }}
-    {{else}}
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">View Contact:</h1>
-            </div>
-            <!-- /.col-lg-12 -->
-        </div>
-        <!-- /.row -->
+  {{#unless contact}}
+    {{> contactsError }}
+  {{else}}
+    <div class="row">
+      <div class="col-lg-12">
+        <h1 class="page-header">View Contact:</h1>
+      </div>
+      <!-- /.col-lg-12 -->
+    </div>
+    <!-- /.row -->
 
-        <div class="row">
-            <div class="col-lg-8">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <i class="fa fa-bar-chart-o fa-fw"></i> Contact
-                    </div>
-                    <!-- /.panel-heading -->
-                    <div class="panel-body">
+    <div class="row">
+      <div class="col-lg-8">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <i class="fa fa-bar-chart-o fa-fw"></i> Contact
+          </div>
+          <!-- /.panel-heading -->
+          <div class="panel-body">
 
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <h4>First Name</h4>
+            <div class="row">
+              <div class="col-lg-6">
+                <h4>First Name</h4>
                                 <span class="col-lg-6 editable" data-type="text"
                                       data-pk="{{ contact._id }}" data-name="firstName">{{ contact.firstName }}</span>
-                            </div>
-                            <div class="col-lg-6">
-                                <h4>Last Name</h4>
+              </div>
+              <div class="col-lg-6">
+                <h4>Last Name</h4>
                                 <span class="col-lg-6 editable" data-type="text"
                                       data-pk="{{ contact._id }}" data-name="lastName">{{ contact.lastName }}</span>
-                            </div>
-                        </div>
-                        <!-- /.row -->
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <h4>Title</h4>
+              </div>
+            </div>
+            <!-- /.row -->
+            <div class="row">
+              <div class="col-lg-6">
+                <h4>Title</h4>
                                 <span class="col-lg-6 editable" data-type="text"
                                       data-pk="{{ contact._id }}" data-name="title">{{ contact.title }}</span>
-                            </div>
-                            <div class="col-lg-6">
-                                <h4>Email</h4>
+              </div>
+              <div class="col-lg-6">
+                <h4>Email</h4>
                                 <span class="col-lg-6 editable" data-type="text"
                                       data-pk="{{ contact._id }}" data-name="email">{{ contact.email }}</span>
-                            </div>
-                        </div>
-                        <!-- /.row -->
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <h4>Phone</h4>
+              </div>
+            </div>
+            <!-- /.row -->
+            <div class="row">
+              <div class="col-lg-6">
+                <h4>Phone</h4>
                                 <span class="col-lg-6 editable" data-type="text"
                                       data-pk="{{ contact._id }}" data-name="phone">{{ contact.phone }}</span>
-                            </div>
-                            <div class="col-lg-6">
-                                <h4>Phone 2</h4>
+              </div>
+              <div class="col-lg-6">
+                <h4>Phone 2</h4>
                                 <span class="col-lg-6 editable" data-type="text"
                                       data-pk="{{ contact._id }}" data-name="phone2">{{ contact.phone2 }}</span>
-                            </div>
-                        </div>
-                        <!-- /.row -->
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <h4>Fax</h4>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <h3>Mailing</h3>
+
+              <div class="row">
+                <div class="col-lg-6">
+                  <h4>Mailing Street</h4>
+                                <span class="col-lg-6 editable" data-type="text"
+                                      data-pk="{{ account._id }}" placeholder="Empty"
+                                      data-name="mailingStreet">{{ account.mailingStreet }}</span>
+                </div>
+                <div class="col-lg-6">
+                  <h4>Mailing City</h4>
+                                <span class="col-lg-6 editable" data-type="text"
+                                      data-pk="{{ account._id }}"
+                                      data-name="mailingCity"
+                                        >{{ account.mailingCity }}</span>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-6">
+                  <h4>Mailing State</h4>
+                                <span class="col-lg-6 editable" data-type="text"
+                                      data-pk="{{ account._id }}" placeholder="Empty"
+                                      data-name="mailingState">{{ account.mailingState }}</span>
+                </div>
+                <div class="col-lg-6">
+                  <h4>Mailing Zip</h4>
+                                <span class="col-lg-6 editable" data-type="text"
+                                      data-pk="{{ account._id }}"
+                                      data-name="mailingZip"
+                                        >{{ account.mailingZip }}</span>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-6">
+                  <h4>Mailing Country</h4>
+                                <span class="col-lg-6 editable" data-type="text"
+                                      data-pk="{{ account._id }}" placeholder="Empty"
+                                      data-name="mailingCountry">{{ account.mailingCountry }}</span>
+                </div>
+              </div>
+
+            </div>
+            <!-- /.row -->
+            <div class="row">
+              <div class="col-lg-6">
+                <h4>Fax</h4>
                                 <span class="col-lg-6 editable" data-type="text"
                                       data-pk="{{ contact._id }}" data-name="fax">{{ contact.fax }}</span>
-                            </div>
-                            <div class="col-lg-6">
-                                <h4>Account</h4>
-                                <span class="col-lg-6 account" data-type="select2" data-pk="{{ contact._id }}" data-name="account_id"><a
+              </div>
+              <div class="col-lg-6">
+                <h4>Account</h4>
+                                <span class="col-lg-6 account" data-type="select2" data-pk="{{ contact._id }}"
+                                      data-name="account_id"><a
                                         href='/account/{{contact.account}}'>{{contact.accountName}}</a></span>
-                            </div>
-                        </div>
-                        <!-- /.row -->
-                    </div>
-                    <!-- /.panel-body -->
-                </div>
-                <!-- /.panel -->
+              </div>
+            </div>
 
+            <div class="row">
+              <div class="col-lg-6">
+                <h4>Description</h4>
+                                <span class="col-lg-6 editable" data-type="textarea"
+                                      data-pk="{{ contact._id }}"
+                                      data-name="description">{{ contact.description }}</span>
+              </div>
 
             </div>
-            <!-- /.col-lg-8 -->
-            <div class="col-lg-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <i class="fa fa-bar-chart-o fa-fw"></i> Comments
-                    </div>
-
-                    <div class="panel-body">
-                        @include('partials.comments')
-                    </div>
-                </div>
-            </div>
+            <!-- /.row -->
+          </div>
+          <!-- /.panel-body -->
         </div>
-        <!-- /.row -->
-    {{/unless}}
+        <!-- /.panel -->
+
+
+      </div>
+      <!-- /.col-lg-8 -->
+      <div class="col-lg-4">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <i class="fa fa-bar-chart-o fa-fw"></i> Comments
+          </div>
+
+          <div class="panel-body">
+            @include('partials.comments')
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /.row -->
+  {{/unless}}
 </template>
