--- a/client/templates/comments/comments.html
+++ b/client/templates/comments/comments.html
@@ -10,6 +10,7 @@
             {{#each comments}}
               <li>
                 <div class="commentText">
+                  <p>{{title}}</p>
                   <p class="">{{{ content }}}</p> <span class="date sub-text">on {{displayDate createdAt}}</span> by
                   <strong>{{ author }} </strong>
 
